syntax = "proto3";
package attestation.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/crypto-org-chain/cronos/x/attestation/types";

// EventBatchBlockAttested is emitted for batch attestations
message EventBatchBlockAttested {
  // Source chain ID
  string chain_id = 1;

  // Rollup address who submitted the batch
  string rollup_address = 2;

  // List of attestation IDs
  repeated uint64 attestation_ids = 3;

  // List of block heights that were attested
  repeated uint64 attest_block_heights = 4;

  // Finality timestamp (0 if not finalized)
  int64 finalized_at = 5;

  // Finality proof (validator signatures, etc.)
  bytes finality_proof = 6;
}
